--- a/ui.apps/src/main/content/jcr_root/apps/verizon-fios-crm/components/content/rte/rte.html
+++ b/ui.apps/src/main/content/jcr_root/apps/verizon-fios-crm/components/content/rte/rte.html
@@ -1,6 +1,12 @@
-<div data-sly-test="${wcmmode.edit && !properties.rte}">
-	DOUBLE CLICK TO CONFIGURE RTE COMPONENT...
-</div>
-<div data-sly-test="${properties.rte}">
-	${properties.rte @ context='html'}
+<p data-sly-use.personalization="rte.js" data-sly-unwrap="${rte.context == rte.CONST.CONTEXT_HTML}" class="${rte.cssClass}" data-emptytext="RTE Component">
+    <div data-sly-unwrap="${wcmmode.disabled || !rte.isTouch}" class="ac-personalize">
+        ${personalization.text @ context=personalization.context}
+    </div>
+</p>
+
+<div data-sly-test="${!wcmmode.disabled && !rte.isTouch}" data-sly-use.clientLib="${'/libs/granite/sightly/templates/clientlib.html'}" data-sly-unwrap>
+	<meta data-sly-call="${clientLib.all @ categories='cq.personalization'}" data-sly-unwrap></meta>
+	<script type="text/javascript">
+		CQ.personalization.variables.Variables.applyToEditComponent("${resource.path @ context='scriptString'}");
+	</script>
 </div>
